netsuite/9.3/modules/ROOT/pages/netsuite-troubleshooting.adoc
= NetSuite Connector Troubleshooting - Mule 4
:keywords: anypoint studio, esb, connectors, http, https, http headers, troubleshooting, rest, raml


You might encounter the following issues when working with the Anypoint Connector for NetSuite (NetSuite Connector):

* <<connectivity-test-failure, A connectivity test fails during application startup.>>
* <<logging-request-responses, The connector does not log requests and responses.>>
* <<permissions-error, The connector returns a permissions error when fetching metadata.>>
* <<search-entities, The connector is unable to search for certain types of objects.>>
* <<item-fullfilment, The connector is unable add a record with type ITEM_FULLFILMENT .>>

== Connectivity Test Failure During Application Startup [[connectivity-test-failure]]

If a connectivity test fails during application startup and you see the following statement in the stack trace, configure a reconnection strategy for the connector:

[source,xml,linenums]
----
Caused by: java.lang.InterruptedException
	at java.util.concurrent.locks.AbstractQueuedSynchronizer.doAcquireSharedInterruptibly(AbstractQueuedSynchronizer.java:998) ~[?:1.8.0_221]
----

To configure a reconnection strategy for the connector in Anypoint Studio (Studio), add these lines to the *Configure XML* tab in the connector properties window:

[source,xml,linenums]
----
<reconnection failsDeployment="true">
	<reconnect count="2" frequency="5" />
</reconnection>
----

For example, the configuration XML for the connector might look like this after you add the reconnection strategy:

[source,xml,linenums]
----
<netsuite:config name="NetSuite_Config" doc:name="NetSuite Config" doc:id="8a4f73c2-e5e1-4f5d-8978-980069828ff0" >
	<netsuite:login-authentication-connection email="${netsuite.email}" password="${netsuite.password}" account="${netsuite.account}" roleId="${netsuite.roleId}" applicationId="${netsuite.applicationId}" readTimeout="60000" connectionTimeout="60000">
		<reconnection failsDeployment="true">
			<reconnect count="2" frequency="5" />
		</reconnection>
	</netsuite:login-authentication-connection>
----

In Studio, you can also use the *Advanced* tab in the connector properties window to configure a reconnection strategy. To do so, complete the following fields:

[%header%autowidth.spread]
|===
|Field |Value
|Reconnection strategy |`Standard`
|Frequency (ms) |`5`
|Reconnection Attempts |`2`
|===

== No Logging of Log Requests and Responses [[logging-request-responses]]

To log requests and responses when using the connector, add this XML statement to the `Log4j` configuration file:

[source,xml,linenums]
----
<AsyncLogger
  name="org.mule.module.netsuite.extension.internal.connection.HttpWithCookieMessageDispatcher"
  level="DEBUG"/>
<Root level="debug">
    <AppenderRef ref="Console" />
</Root>
----

== Permissions Error When Fetching Metadata [[permissions-error]]

To avoid receiving a permissions error when fetching metadata, enable the `Control SuiteScript and Workflow Triggers in Web Services Request` option in NetSuite for the role used in the connector configuration.

[[search-entities]]
== Inability to Search for Certain Types of Objects

There is a limitation in NetSuite's SuiteTalk API, that prevents you from searching for certain types of objects, such as Sales Order objects. Because of this limitation, you can't use the NetSuite Connector `Search` operation to locate these objects.

To perform a search for Sales Order objects and other unsupported objects, you can do either of the following:

* Develop a SuiteScript, deploy it as a RESTlet, and call it from the connector.
* Create a saved search and call it from the connector.

[[item-fullfilment]]
== The connector is unable add a record with type ITEM_FULLFILMENT

When you are trying to add a record type ITEM_FULLFILMENT and you get this error :
```
********************************************************************************
Message               : org.mule.module.netsuite.extension.api.ItemFulfillmentShipStatus cannot be cast to java.lang.String
Element               : item-fulfillment-bug-demoFlow/processors/3 @ item-fulfillment-bug-demo_(1):item-fulfillment-bug-demo.xml:67 (Add record)
Element DSL           : <netsuite:add-record doc:name="Add record" doc:id="49d555e4-4e04-45c3-aec3-912c6106c487" config-ref="NetSuite_Config" recordType="ITEM_FULFILLMENT"></netsuite:add-record>
Error type            : NETSUITE:UNKNOWN
FlowStack             : at item-fulfillment-bug-demoFlow(item-fulfillment-bug-demoFlow/processors/3 @ item-fulfillment-bug-demo_(1):item-fulfillment-bug-demo.xml:67 (Add record))

  (set debug level logging or '-Dmule.verbose.exceptions=true' for everything)
```
That means that you should use the following code as template for your flow :
[source,xml,linenums]
----
<ee:transform doc:name="Transform Message" doc:id="1d11632d-b41f-4b88-b17e-24a57319595f" >
                <ee:message >
                    <ee:set-payload ><![CDATA[%dw 2.0
                    output application/java
                    ---
                    {
                        createdFrom: {
                            internalId: 1560,
                        },
                        itemList: {
                            item: payload.itemList.item map (item , indexOfItem) -> {
                                    orderLine: item.orderLine,
                                    itemIsFulfilled: true,
                                    quantity: 1
                            }
                        },
                        packageList: {
                            packageCollection: [{
                                packageTrackingNumber: "9400110200GGTTT",
                                packageWeight: 99.000,
                                packageDescr: "Description"
                            }]
                        },
                        shipMethod: {
                            internalId: 528
                        },
                        shipStatus: 'SHIPPED'
                    }]]></ee:set-payload>
                </ee:message>
            </ee:transform>
            <netsuite:add-record doc:name="Add record"
                                 doc:id="65c72d9b-0419-4c1d-9a3a-2ba8eba59328" config-ref="requestBasedConfig"
                                 recordType="ITEM_FULFILLMENT" />
----
Because you can can't use the word package as attribute inside the entity package list .
In case you need sample flow here it is one :
----
 <netsuite:initialize doc:name="Initialize" doc:id="6e67497d-cde2-4030-aa5d-b62c0ab9bed4" config-ref="requestBasedConfig">
                <netsuite:record-to-initialize ><![CDATA[#[%dw 2.0
			output application/java
			---
			{
				reference: {
					internalId: 1560,
						"type": 'SALES_ORDER'
				},
				"type": 'ITEM_FULFILLMENT'
			}]]]></netsuite:record-to-initialize>
            </netsuite:initialize>
            <ee:transform doc:name="Transform Message" doc:id="1d11632d-b41f-4b88-b17e-24a57319595f" >
                <ee:message >
                    <ee:set-payload ><![CDATA[%dw 2.0
                    output application/java
                    ---
                    {
                        createdFrom: {
                            internalId: 1560,
                        },
                        itemList: {
                            item: payload.itemList.item map (item , indexOfItem) -> {
                                    orderLine: item.orderLine,
                                    itemIsFulfilled: true,
                                    quantity: 1
                            }
                        },
                        packageList: {
                            packageCollection: [{
                                packageTrackingNumber: "9400110200GGTTT",
                                packageWeight: 99.000,
                                packageDescr: "Description"
                            }]
                        },
                        shipMethod: {
                            internalId: 528
                        },
                        shipStatus: 'SHIPPED'
                    }]]></ee:set-payload>
                </ee:message>
            </ee:transform>
            <netsuite:add-record doc:name="Add record"
                                 doc:id="65c72d9b-0419-4c1d-9a3a-2ba8eba59328" config-ref="requestBasedConfig"
                                 recordType="ITEM_FULFILLMENT" />
----